Fix Change Coupling

--- a/Change_Coupling.ipynb
+++ b/Change_Coupling.ipynb
@@ -1,188 +1,76 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "source": [
-    "file_to_analyse = \"gaphor.csv\""
+    "# Quick code analysis\n",
+    "\n",
+    "To get going with this notebook I suggest using VS Code with Python extension.\n",
+    "\n",
+    "Create a virtual environment in this folder:\n",
+    "\n",
+    "```\n",
+    "python -m venv .venv\n",
+    "```\n",
+    "\n",
+    "Select the Python Interpreter from the venv in the quick command menu (Ctrl/Cmd + Shift + P) -> `> Python: Select Interpreter` (refresh the interpreter list or reload the window if it does not show up).\n",
+    "\n",
+    "Open a terminal, load the venv if that's not done automatically, and install pandas:\n",
+    "\n",
+    "```\n",
+    "pip install pandas\n",
+    "```\n",
+    "\n",
+    "Ensure `git` can be be found.\n",
+    "\n",
+    "Change the variables below to point to your repo of interest, and give this notebook a spin (VS Code may ask if it needs to install a Jupyter kernel)."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "source": [
+    "file_to_analyse = \"gaphor.csv\"\n",
+    "after = \"two months ago\"\n",
+    "top = 10\n"
    ],
    "outputs": [],
    "metadata": {}
   },
   {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "source": [
     "import pandas\n",
     "\n",
-    "df = pandas.read_csv(file_to_analyse, names=[\"date\", \"commit\", \"added\", \"removed\", \"filename\"])\n",
-    "df"
+    "# TODO: do what's done from the extractor script here\n",
+    "\n",
+    "df = pandas.read_csv(file_to_analyse, names=[\"date\", \"commit\", \"added\", \"removed\", \"filename\"])"
    ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>commit</th>\n",
-       "      <th>added</th>\n",
-       "      <th>removed</th>\n",
-       "      <th>filename</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2021-09-28 16:47:31 +0200</td>\n",
-       "      <td>64b5ee40a7be3ceedcf3db1f9a9aeef9801d7bcd</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>gaphor/py.typed</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2021-09-28 11:31:13 +0200</td>\n",
-       "      <td>42b9232069dcb13f786539277c753cb4cea140d0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>gaphor/ui/elementeditor.glade</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2021-09-28 11:31:13 +0200</td>\n",
-       "      <td>42b9232069dcb13f786539277c753cb4cea140d0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>gaphor/ui/elementeditor.ui</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2021-09-28 11:31:13 +0200</td>\n",
-       "      <td>42b9232069dcb13f786539277c753cb4cea140d0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>po/ca.po</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2021-09-28 11:31:13 +0200</td>\n",
-       "      <td>42b9232069dcb13f786539277c753cb4cea140d0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>po/es.po</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9861</th>\n",
-       "      <td>2019-09-29 17:37:56 -0400</td>\n",
-       "      <td>9d236eaa90072114e4de205a220b2f9e6c3e6ee3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>win-installer/misc/create-launcher.py</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9862</th>\n",
-       "      <td>2019-09-29 17:23:29 -0400</td>\n",
-       "      <td>9c66d689e2ebb826df9a808de8c9837ba867e97f</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>azure-pipelines.yml</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9863</th>\n",
-       "      <td>2019-09-29 17:19:32 -0400</td>\n",
-       "      <td>8c206bd80e854bde95e85bce03798580222ea24b</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>azure-pipelines.yml</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9864</th>\n",
-       "      <td>2019-09-29 17:08:56 -0400</td>\n",
-       "      <td>15a567395d71611febde0dc91ca4a9c7ec19871e</td>\n",
-       "      <td>43</td>\n",
-       "      <td>0</td>\n",
-       "      <td>win-installer/file_version_info.txt</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9865</th>\n",
-       "      <td>2019-09-29 17:08:56 -0400</td>\n",
-       "      <td>15a567395d71611febde0dc91ca4a9c7ec19871e</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>win-installer/gaphor.spec</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>9866 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                           date                                    commit  \\\n",
-       "0     2021-09-28 16:47:31 +0200  64b5ee40a7be3ceedcf3db1f9a9aeef9801d7bcd   \n",
-       "1     2021-09-28 11:31:13 +0200  42b9232069dcb13f786539277c753cb4cea140d0   \n",
-       "2     2021-09-28 11:31:13 +0200  42b9232069dcb13f786539277c753cb4cea140d0   \n",
-       "3     2021-09-28 11:31:13 +0200  42b9232069dcb13f786539277c753cb4cea140d0   \n",
-       "4     2021-09-28 11:31:13 +0200  42b9232069dcb13f786539277c753cb4cea140d0   \n",
-       "...                         ...                                       ...   \n",
-       "9861  2019-09-29 17:37:56 -0400  9d236eaa90072114e4de205a220b2f9e6c3e6ee3   \n",
-       "9862  2019-09-29 17:23:29 -0400  9c66d689e2ebb826df9a808de8c9837ba867e97f   \n",
-       "9863  2019-09-29 17:19:32 -0400  8c206bd80e854bde95e85bce03798580222ea24b   \n",
-       "9864  2019-09-29 17:08:56 -0400  15a567395d71611febde0dc91ca4a9c7ec19871e   \n",
-       "9865  2019-09-29 17:08:56 -0400  15a567395d71611febde0dc91ca4a9c7ec19871e   \n",
-       "\n",
-       "     added removed                               filename  \n",
-       "0        0       0                        gaphor/py.typed  \n",
-       "1        1       1          gaphor/ui/elementeditor.glade  \n",
-       "2        1       1             gaphor/ui/elementeditor.ui  \n",
-       "3        2       2                               po/ca.po  \n",
-       "4        2       2                               po/es.po  \n",
-       "...    ...     ...                                    ...  \n",
-       "9861     2       2  win-installer/misc/create-launcher.py  \n",
-       "9862     1       1                    azure-pipelines.yml  \n",
-       "9863     7       0                    azure-pipelines.yml  \n",
-       "9864    43       0    win-installer/file_version_info.txt  \n",
-       "9865     1       0              win-installer/gaphor.spec  \n",
-       "\n",
-       "[9866 rows x 5 columns]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 2
-    }
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Churn\n",
+    "\n",
+    "Churn is simplyhow many times a file has changed in the history of a project. The more often it changed, the higher the \"churn\"."
    ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "source": [
-    "df.groupby(['filename']).size().reset_index(name='counts').sort_values(\"counts\")"
+    "churn = df.groupby(['filename']).size().reset_index(name='counts').sort_values(\"counts\", ascending=False)\n",
+    "churn[:top]"
    ],
    "outputs": [
     {
@@ -213,49 +101,9 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1502</th>\n",
-       "      <td>utils/__init__.py</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307</th>\n",
-       "      <td>docs/style-sheets/draft.png</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>306</th>\n",
-       "      <td>docs/style-sheets/dark.png</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>305</th>\n",
-       "      <td>docs/style-sheets/class.png</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>304</th>\n",
-       "      <td>docs/style-sheet-examples.gaphor</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1190</th>\n",
-       "      <td>gaphor/ui/namespace.py</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1000</th>\n",
-       "      <td>gaphor/ui/diagrampage.py</td>\n",
-       "      <td>101</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>.github/workflows/build.yml</td>\n",
-       "      <td>151</td>\n",
+       "      <th>1458</th>\n",
+       "      <td>poetry.lock</td>\n",
+       "      <td>210</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1459</th>\n",
@@ -263,44 +111,85 @@
        "      <td>195</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1458</th>\n",
-       "      <td>poetry.lock</td>\n",
-       "      <td>210</td>\n",
+       "      <th>22</th>\n",
+       "      <td>.github/workflows/build.yml</td>\n",
+       "      <td>151</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000</th>\n",
+       "      <td>gaphor/ui/diagrampage.py</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1186</th>\n",
+       "      <td>gaphor/ui/mainwindow.py</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1190</th>\n",
+       "      <td>gaphor/ui/namespace.py</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>677</th>\n",
+       "      <td>gaphor/core/modeling/diagram.py</td>\n",
+       "      <td>87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>294</th>\n",
+       "      <td>docs/requirements.txt</td>\n",
+       "      <td>79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>820</th>\n",
+       "      <td>gaphor/diagram/presentation.py</td>\n",
+       "      <td>77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <td>README.md</td>\n",
+       "      <td>76</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1548 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                              filename  counts\n",
-       "1502                 utils/__init__.py       1\n",
-       "307        docs/style-sheets/draft.png       1\n",
-       "306         docs/style-sheets/dark.png       1\n",
-       "305        docs/style-sheets/class.png       1\n",
-       "304   docs/style-sheet-examples.gaphor       1\n",
-       "...                                ...     ...\n",
-       "1190            gaphor/ui/namespace.py      92\n",
-       "1000          gaphor/ui/diagrampage.py     101\n",
-       "22         .github/workflows/build.yml     151\n",
-       "1459                    pyproject.toml     195\n",
-       "1458                       poetry.lock     210\n",
-       "\n",
-       "[1548 rows x 2 columns]"
+       "                             filename  counts\n",
+       "1458                      poetry.lock     210\n",
+       "1459                   pyproject.toml     195\n",
+       "22        .github/workflows/build.yml     151\n",
+       "1000         gaphor/ui/diagrampage.py     101\n",
+       "1186          gaphor/ui/mainwindow.py      92\n",
+       "1190           gaphor/ui/namespace.py      92\n",
+       "677   gaphor/core/modeling/diagram.py      87\n",
+       "294             docs/requirements.txt      79\n",
+       "820    gaphor/diagram/presentation.py      77\n",
+       "49                          README.md      76"
       ]
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 39
     }
    ],
    "metadata": {}
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "source": [
-    "# df.pivot(index=\"commit\", columns=\"filename\", values=\"added\")\n",
-    "pivot = {}\n",
+    "# Change Coupling\n",
+    "\n",
+    "Change coupling tells us which files have a tendency to change together."
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "source": [
+    "from IPython.core.display import HTML\n",
+    "\n",
+    "combinations = {}\n",
     "commits = {}\n",
     "\n",
     "for _, group in df.groupby(['commit']):\n",
@@ -313,26 +202,29 @@
     "\n",
     "    for pair in itertools.combinations(group['filename'], 2):\n",
     "        try:\n",
-    "            pivot[pair] += 1\n",
+    "            combinations[pair] += 1\n",
     "        except KeyError:\n",
-    "            pivot[pair] = 1\n",
+    "            combinations[pair] = 1\n",
     "\n",
-    "sorted(((n / commits[a], n, commits[a], commits[b], a, b) for (a, b), n in pivot.items() if n / commits[a] < 1.0),reverse=1)[:5]\n"
+    "change_coupling = sorted(((n / commits[a] + n / commits[b], n, a, b) for (a, b), n in combinations.items()),reverse=1)[:top]\n",
+    "\n",
+    "rows = (f\"<tr><td>{n}</td><td>{file_a}</td><td>{commits[file_a]}</td><td>{int(n / commits[file_a] * 100)}</td></tr><tr><td></td><td>{file_b}</td><td>{commits[file_b]}</td><td>{int(n / commits[file_b] * 100)}</td></tr>\" for _, n, file_a, file_b in change_coupling)\n",
+    "\n",
+    "HTML(f'<table><th><td>Coupled Entities</td><td>Commits</td><td>% coupling</td></tr>{\"\".join(rows)}</table>')"
    ],
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
+      "text/html": [
+       "<table><th><td>Coupled Entities</td><td>Commits</td><td>% coupling</td></tr><tr><td>13</td><td>po/ru.po</td><td>13</td><td>100</td></tr><tr><td></td><td>po/sv.po</td><td>13</td><td>100</td></tr><tr><td>13</td><td>po/ca.po</td><td>13</td><td>100</td></tr><tr><td></td><td>po/sv.po</td><td>13</td><td>100</td></tr><tr><td>13</td><td>po/ca.po</td><td>13</td><td>100</td></tr><tr><td></td><td>po/ru.po</td><td>13</td><td>100</td></tr><tr><td>9</td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-extend-symbolic.svg</td><td>9</td><td>100</td></tr><tr><td></td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-include-symbolic.svg</td><td>9</td><td>100</td></tr><tr><td>8</td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-trace-symbolic.svg</td><td>8</td><td>100</td></tr><tr><td></td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-verify-symbolic.svg</td><td>8</td><td>100</td></tr><tr><td>8</td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-satisfy-symbolic.svg</td><td>8</td><td>100</td></tr><tr><td></td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-verify-symbolic.svg</td><td>8</td><td>100</td></tr><tr><td>8</td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-satisfy-symbolic.svg</td><td>8</td><td>100</td></tr><tr><td></td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-trace-symbolic.svg</td><td>8</td><td>100</td></tr><tr><td>8</td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-refine-symbolic.svg</td><td>8</td><td>100</td></tr><tr><td></td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-verify-symbolic.svg</td><td>8</td><td>100</td></tr><tr><td>8</td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-refine-symbolic.svg</td><td>8</td><td>100</td></tr><tr><td></td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-trace-symbolic.svg</td><td>8</td><td>100</td></tr><tr><td>8</td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-refine-symbolic.svg</td><td>8</td><td>100</td></tr><tr><td></td><td>gaphor/ui/icons/hicolor/scalable/actions/gaphor-satisfy-symbolic.svg</td><td>8</td><td>100</td></tr></table>"
+      ],
       "text/plain": [
-       "[(0.9285714285714286, 13, 14, 14, 'po/fr.po', 'po/pt_BR.po'),\n",
-       " (0.9285714285714286, 13, 14, 13, 'po/pt_BR.po', 'po/sv.po'),\n",
-       " (0.9285714285714286, 13, 14, 13, 'po/pt_BR.po', 'po/ru.po'),\n",
-       " (0.9285714285714286, 13, 14, 13, 'po/fr.po', 'po/sv.po'),\n",
-       " (0.9285714285714286, 13, 14, 13, 'po/fr.po', 'po/ru.po')]"
+       "<IPython.core.display.HTML object>"
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 40
     }
    ],
    "metadata": {}
