--- a/Quick_Code_Analysis.ipynb
+++ b/Quick_Code_Analysis.ipynb
@@ -30,6 +30,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Configuration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "metadata": {},
@@ -46,10 +54,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First some plumbing: read the Git history in a data frame."
+    "### Collect data and latest commits\n",
+    "\n",
+    "First some plumbing: read the Git history in a data frame. The latest commits are shown, so you have an idea what the data set is like."
    ]
   },
   {
